<resources>
    <string name="app_name">BlogApp</string>

    <string name="login_logo_desc">SBlog App</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Register</string>

    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="reg_btn_text">Register</string>
    <string name="reg_login_text">Login</string>
    <string name="reg_pass_text">Password</string>
    <string name="setup_btn_name_text">Set</string>
    <string name="setup_name_hint_text">Username</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="post_desc_hint">Post Description</string>
    <string name="new_post_btn_hint">Create New Post</string>


</resources>
